--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -62,5 +62,13 @@
   "french": "French",
   "@french": {
     "description": ""
+  },
+  "object": "Object",
+  "@object": {
+    "description": ""
+  },
+  "count": "Count",
+  "@count": {
+    "description": ""
   }
 }
