feat: information ui

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -71,6 +71,14 @@
   "@count": {
     "description": ""
   },
+  "quantity": "Qty.",
+  "@quantity": {
+    "description": ""
+  },
+  "order": "Order",
+  "@order": {
+    "description": ""
+  },
   "serverStatus": "Server Status",
   "@serverStatus": {
     "description": ""
