update: information UI

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -43,6 +43,10 @@
   "@information": {
     "description": ""
   },
+  "informationDetectionInfo": "Detection information",
+  "@informationDetectionInfo": {
+    "description": ""
+  },
   "controlPanel": "Control Panel",
   "@controlPanel": {
     "description": ""
