update: info UI

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -110,5 +110,9 @@
   "noPreviewMsg": "No preview available",
   "@noPreviewMsg": {
     "description": ""
+  },
+  "sample": "Sample",
+  "@sample": {
+    "description": ""
   }
 }
